--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#Skillss">Skillss</a></li>
+                <li><a href="#Skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -24,11 +24,9 @@
         <img src="image/amrit.jpg">
         <div class="asish">
             <p>
-                <br>Hello, I’m Amrit Gurung, and I hail from the beautiful town of Tokha in Kathmandu, Nepal. I am deeply passionate about personal development, creativity, and making meaningful contributions in the fields I engage with. Throughout my journey, I have cultivated a strong set of skills and experiences that have allowed me to grow both professionally and personally.
-<br>
-                Living in Kathmandu, a city rich in culture, history, and opportunities, has shaped my perspective and fueled my desire for innovation and excellence. I strive to approach every project with enthusiasm, adaptability, and a drive for success. Whether working on individual projects or collaborating with teams, I believe that a creative mindset and a collaborative spirit can lead to impactful results.<br>
-                
-                In this portfolio, you will find a collection of my work, experiences, and achievements that reflect my dedication to continuous learning and improvement. I value not just the end result, but the process of growth that comes with every challenge I face. I am always eager to learn, adapt, and push boundaries to create work that I can be proud of. Thank you for taking the time to explore my portfolio—I look forward to connecting and sharing my journey with you.<br></p>
+                <br>
+
+                Hello! I’m Amrit Gurung, a dedicated and passionate individual born in the serene and culturally rich district of Lamjung, Nepal. Growing up in such a naturally inspiring environment has shaped my creative mindset and motivated me to pursue excellence in everything I do. I believe in hard work, continuous learning, and using creativity as a tool for meaningful impact. My portfolio reflects a journey of growth, experience, and an unwavering commitment to quality. Each project I undertake is driven by curiosity and a desire to innovate, whether it's in design, development, or creative expression. I strive to combine technical skills with artistic vision to create work that is not only visually appealing but also purposeful. With every step forward, I aim to learn more, grow stronger, and contribute positively to the world around me. Thank you for taking the time to explore my portfolio—welcome to my story </p>
         </div>
     </section>
 
@@ -47,7 +45,6 @@
         <div class="container">
             <h2>Skills</h2>
             <div class="Skills">
-                <h3>Skills </h3>
                 <p>I am poet so my poems are given below:<br>
                 <br>
             Way of plane to steep hills over dreamed joy,
@@ -61,8 +58,9 @@
         <br><br>Up to the top climbing to sky,
             <br>Dried desert here only me to lie,
             <br>Very high here wanna go down please,
-            <br>sSelfish me knows where my shadow is.
+            <br>Selfish me knows where my shadow is.
             <br></p>
+            <p class="new">I have tried to create a website about biograpgy of the singer Amrit Gurung.<a href="amritgrg.html" target="_blank">Click here</a> </p> 
             </div>
         </div>
     </section>
@@ -70,7 +68,11 @@
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>If you'd like to get in touch, feel free to reach out email at: <a href="ag9846099991@gmail.com">ag9846099991@gmail.com</a>
+            <p>If you'd like to get in touch, feel free to reach out at <br>
+                E-mail: <a href="ag9846099991@gmail.com">ag9846099991@gmail.com</a><br>
+                Facebook: <a href="https://www.facebook.com/profile.php?id=100043846954569">Amrit Gurung</a><br>
+                Instagram: <a href="https://www.instagram.com/amrit_gurung88/">amrit_gurung88</a><br>
+                Phone Number: <a href="#">9769329461</a>
             </p>
         </div>
     </section>
