--- a/amritgrg.html
+++ b/amritgrg.html
@@ -65,22 +65,22 @@
     </div>
     <h1>Some of the song of Nepathya are presented below:</h1>
         <p><b>Aganai Bhari</b> song aganai bhari is the most of the famous song of nepathya band.</P>
-        <audio controls autoplay><source src="aganaibhari.mp3.mp3" type="audio/mpeg">
+        <audio controls ><source src="aganaibhari.mp3.mp3" type="audio/mpeg">
             your song
         </audio>
     <br>
     <p><b>Taal ko Pani</b> ko pani is the most energetic song fo Nepathya band.</p>
-        <audio controls autoplay><source src="taal.mp3.mp3" type="audio/mpeg">
+        <audio controls ><source src="taal.mp3.mp3" type="audio/mpeg">
             your song
         </audio>
     <br><br><br>
     <p><b>RESHAM:</b> is the another most favourite song among youths in 90's also today.</p>
-        <audio controls autoplay><source src="resham.mp3.mp3" type="audio/mpeg">
+        <audio controls ><source src="resham.mp3.mp3" type="audio/mpeg">
             your song
         </audio>
     <br><br><br>
     <h1>The biography of Amrit Gurung has been presented below:</h1>
-        <video width="340px" height="240px" controls autoplay>
+        <video width="340px" height="240px" controls >
             <source src="bio.mp4.mp4" type="video/mp4">
         </video>
     
